# sensor_planning

./: .gitmodules  README.md  docker-compose.yaml
gazebo_docker/: Dockerfile  entrypoint.sh
src/nbv_space/: package.xml  setup.cfg  setup.py
src/nbv_space/launch/: chaser_preview.launch.py  gazebo.launch.py  rviz.launch.py  soho_preview.launch.py
src/nbv_space/meshes/: SOHO_Body1_20thScale.stl  SOHO_Body2_20thScale.stl  SOHO_Panel_20thScale.stl  SOHO_Panel_20thScale.stl_A.stl  SOHO_Panel_20thScale.stl_B_A.stl  SOHO_Panel_20thScale.stl_B_B.stl
src/nbv_space/nbv_space/: chaser_hcw_dynamics.py  target_dynamics.py  target_euler_dynamics.py
src/nbv_space/scripts/: target_dynamics.py
src/nbv_space/urdf/: chaser.urdf.xacro  fullchaser.urdf.xacro  soho_preview.urdf.xacro  target.urdf.xacro
src/nbv_space/worlds/: empty_no_floor.sdf  empty_no_floor.world
src/nbv_space_plugins/: CMakeLists.txt  package.xml
src/nbv_space_plugins/env-hooks/: nbv_space_plugins.sh.in
src/nbv_space_plugins/src/: SpacecraftPosePlugin.cc
