<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nbv_space_plugins</name>
  <version>0.1.0</version>
  <description>
    Gz Harmonic system plugins for nbv_space.
    Provides SpacecraftPosePlugin: subscribes to ROS2 Pose topics and sets
    entity poses directly via the ECM each physics step, replacing the
    slow gz-service subprocess architecture.
  </description>
  <maintainer email="prsingh@utexas.edu">Parul</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ build deps -->
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-plugin2</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Runtime: the .so needs these at load time -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>